--- a/chatclient/package.json
+++ b/chatclient/package.json
@@ -15,14 +15,16 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@mui/x-date-pickers": "^7.7.0",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-stomp-hooks": "^2.1.0",
     "socket.io-client": "^4.7.2",
-    "sockjs-client": "^1.6.1",
-    "react-stomp-hooks": "^2.1.0"
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
