--- a/chatservice/src/main/resources/application.properties
+++ b/chatservice/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=chatservice
+server.port=8080
 
+logging.level.org.springframework=WARN
 
 spring.datasource.url=jdbc:mysql://localhost:3306/chat?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 
-logging.level.org.springframework.security = TRACE
+#logging.level.org.springframework.security = TRACE
 #logging.level.org.springframework.security=DEBUG
 server.error.whitelabel.enabled=false
 
