--- a/chatclient/package.json
+++ b/chatclient/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^6.23.1",
     "react-stomp-hooks": "^2.1.0",
     "socket.io-client": "^4.7.2",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
