--- a/chatservice/src/main/resources/application-prod.properties
+++ b/chatservice/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ spring.application.name=chatservice
 server.port=8080
 
 logging.level.org.springframework=WARN
-
+#this is a comment
 spring.datasource.url=jdbc:mysql://chat-database-1.cynki2668fbq.us-east-1.rds.amazonaws.com:3306/chat?createDatabaseIfNotExist=true
 spring.datasource.username=admin
 spring.datasource.password=ksn#1998
